# HMH-01

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
project/: CHANGELOG.md  PROJECT_MANIFEST  ROADMAP.md  SESSION_HANDOFF.md
src/: __init__.py
src/qrp/api/: __init__.py
src/qrp/foundation/: __init__.py  base_component.py  exceptions.py
src/qrp/plugins/: __init__.py  plugin.py
src/qrp/runtime/: __init__.py  bootstrap.py  component_registry.py  configuration.py  container.py  event_bus.py  lifecycle.py  lifecycle_coordinator.py  log_manager.py  runtime.py
src/qrp/sdk/: __init__.py
src/qrp/services/: __init__.py  service.py
src/qrp/tests/: test_runtime.py
tests/: test_bootstrap.py  test_component_registry.py  test_configuration.py  test_container.py  test_event_bus.py  test_lifecycle_coordinator.py  test_log_manager.py  test_plugin.py  test_runtime.py  test_service.py  test_smoke.py
